; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_name-rev.c_name_ref_abbrev.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_name-rev.c_name_ref_abbrev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"refs/heads/\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"refs/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @name_ref_abbrev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @name_ref_abbrev(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = call i8* @shorten_unambiguous_ref(i8* %8, i32 0)
  store i8* %9, i8** %3, align 8
  br label %26

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = call i64 @starts_with(i8* %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i8*, i8** %3, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 11
  store i8* %16, i8** %3, align 8
  br label %25

17:                                               ; preds = %10
  %18 = load i8*, i8** %3, align 8
  %19 = call i64 @starts_with(i8* %18, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = load i8*, i8** %3, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 5
  store i8* %23, i8** %3, align 8
  br label %24

24:                                               ; preds = %21, %17
  br label %25

25:                                               ; preds = %24, %14
  br label %26

26:                                               ; preds = %25, %7
  %27 = load i8*, i8** %3, align 8
  ret i8* %27
}

declare dso_local i8* @shorten_unambiguous_ref(i8*, i32) #1

declare dso_local i64 @starts_with(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
